# tf_custom_op

./: .drone.yml  .gitignore  .travis.yml  README.md  setup.py  test_matrix_add.py
.docker/1.9/: Dockerfile-tf1.9-cuda9-ubuntu16.04  Dockerfile.depend-cuda9-ubuntu16.04  make.sh
.local/: CMakeLists.txt
Backup/: Makefile
matrix_add/: CMakeLists.txt  Makefile  __init__.py  configure.py  custom_Makefile  matrix_add_op.cc  matrix_add_op.cu.cc  matrix_add_op.cu.hh  matrix_add_op.cuh  tensorflow_config.example.txt
matrix_add/cmake/Modules/: FindTensorFlow.cmake
matrix_add/kernels/: matrix_add_kernel.cc  matrix_add_kernel.cu  matrix_add_op.cc  matrix_add_op.cu  matrix_add_op.h
matrix_add/ops/: matrix_add.cc
user_ops/: FindTENSORFLOW.cmake  test_matrix_add.py
user_ops/kernels/: matrix_add_kernel.cu  matrix_add_op.cc
